--- a/desafios/desafio011/style.css
+++ b/desafios/desafio011/style.css
@@ -1,59 +1,70 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2? family= Bebas+Neue & family= Passion+One:wght@400;700;900 & display=swap');
+@import url('https://fonts.googleapis.com/css2? family= Bebas+Neue & family= Passion+One & display=swap');
 @import url('https://fonts.googleapis.com/css2? family= Bebas+Neue & family= Sriracha & display=swap');
 
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 :root {
-    --fonte-padrao: Arial, Verdana, sans-serif;
-    --fonte-destaque: 'Passion+One', cursive;
-    --fonte-texto: 'Sriracha', sans-serif;  
+    --fonte0: Arial, Verdana, sans-serif;
+    --fonte1: 'Passion One', cursive;
+    --fonte2: 'Sriracha', cursive;  
+}
+html, body {
+    min-height: 100vh;
+    background-color: rgb(39, 39, 39);
 }
 
 header {
     background-color: rgb(0, 0, 0);
     color: white;
     text-align: center;
-    height: 200px;
-    margin: -8px;
 }
 header > h1 {
-    font-family: var(--fonte-texto);
-    font-size: 4em;
-    margin-top: 0px;
+    font-family: var(--fonte1);
     padding-top: 50px;
+    font-variant: small-caps;
+    font-size: 10vw;
 }
 header > p {
-    font-family: var(--fonte-padrao);
-    margin-top: -35px;
-    font-size: 20px;
+    padding-bottom: 50px;
 }
-section {
-    padding: 70px 30px;
+a {
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+a:hover {
+    text-decoration: underline;
+}
+section  {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+    font-family: var(--fonte2);
+    font-size: 4vw;
 }
 
 .normal {
-    font-family: var(--fonte-destaque);
-    font-size: 1.6em;
+    background-color: white;
 }
 
-.imagem1 {
-    font-family: var(--fonte-destaque);
-    font-size: 1.6em;
-    background-image: url(imagens/background001.jpg);
-    background-position: relative;
-    background-size: 100% 100%;
+section.imagem {
+    background-color: rgb(44, 43, 43);
+    color:  white;
 }
-
-
-.imagem2 {
-    font-family: var(--fonte-destaque);
-    font-size: 1.6em;
-    background-image: url(imagens/background002.jpg);
-    background-position: relative;
-    background-size: 100% 100%;
+section.imagem > p {
+    background-color: rgba(0, 0, 0, 0.248);
+    display: inline-block;
+    padding: 10px;
 }
-
-.fundo {
-    background-color: rgb(0 0 0 / 51%);
+footer {
+    background-color: black;
     color: white;
+    padding: 10px; 
+    text-align: center;
 }
